crates/ty_server/tests/e2e/snapshots/e2e__configuration__configuration_file_and_overrides.snap
---
source: crates/ty_server/tests/e2e/configuration.rs
expression: diagnostics
---
{
  "items": [],
  "kind": "full"
}
